# hikolang

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  function.md  launch.json  minimum_language.md  syntax.iko  syntax_base.iko  syntax_sugar.iko  t.py  value_types.md  vcpkg.json
.github/workflows/: build-on-linux.yml  build-on-macos.yml  build-on-unix.yml  build-on-windows.yml
doc/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  INSTALL.md  error_handling.md  flow_control.md  functions.md  integer.md  statement.md  tokenizer.md
doc/language/: argument_declaration.md  c_abi_compatibility.md  catch.md  catch_clauses.md  compilation_order.md  condition_expression.md  customization_points.md  data_model.md  error_handling.md  expression.md  expression_list.md  file_organization.md  generator_functions.md  if.md  integer.md  lambda.md  modules.md  niche_values.md  relocation.md  result.md  statement_list.md  string.md  sub-expression.md  sub_expression.md  symbol_search.md  syntax.md  tasks.md  test_expression.md  tokenizer.md  try.md  tutorial.md  type_declaration.md  unified_functions.md  units_and_tags.md  value_categories.md  variable_declaration.md  variables.md  while.md
doc/tutorial/: Conversions.md  Functions.md  Program_Structure.md  Ranged_Integers.md  Values.md  Variables.md  outline.md  prompt.md  table_of_contents.md
examples/: functions.iko
lang/std/: integer.iko
lang/syntax/: base.iko  literal.iko  syntax_statement.iko
src/: char_category.cpp  char_category.hpp  char_lookahead.hpp  cursor.cpp  cursor.hpp  file.cpp  file.hpp  file_cursor.cpp  file_cursor.hpp  file_location.hpp  line_column.hpp  maybe_expected.hpp  module.hpp  path.cpp  path.hpp  token.cpp  token.hpp  token_parse_block_comment.cpp  token_parse_identifier.cpp  token_parse_line_comment.cpp  token_parse_line_directive.cpp  token_parse_number.cpp  token_parse_operator.cpp  token_parse_string.cpp  token_parse_version.cpp  token_parsers.hpp  tokenizer.cpp  tokenizer.hpp  tokenizer_parse_block_comment.cpp  tokenizer_parse_comment.cpp  tokenizer_parse_identifier.cpp  tokenizer_parse_injected_variable.cpp  tokenizer_parse_line_comment.cpp  tokenizer_parse_line_directive.cpp  tokenizer_parse_number.cpp  tokenizer_parse_numbered_argument.cpp  tokenizer_parse_operator.cpp  tokenizer_parse_positional_argument.cpp  tokenizer_parse_string.cpp  tokenizer_parse_version.cpp  (+4 more)
src/ast/: attribute_node.hpp  build_guard_binary_operator_node.hpp  build_guard_expression_node.hpp  build_guard_literal_node.hpp  build_guard_unary_operator_node.hpp  build_guard_variable_node.hpp  condition_expression_node.hpp  documentation_node.hpp  expression_node.hpp  import_declaration_node.cpp  import_declaration_node.hpp  import_library_declaration_node.hpp  import_module_declaration_node.hpp  import_repository_declaration_node.cpp  import_repository_declaration_node.hpp  library_declaration_node.hpp  library_node.hpp  module_declaration_node.hpp  module_node.cpp  module_node.hpp  node.cpp  node.hpp  nodes.hpp  package_import_node.hpp  package_node.hpp  program_declaration_node.hpp  program_node.hpp  top_declaration_node.hpp  top_node.hpp
src/build_guard/: build_guard_context.cpp  build_guard_context.hpp  build_guard_value.cpp  build_guard_value.hpp
src/builtin_types/: long_int.hpp
src/error/: error.hpp  error_code.hpp  error_codes.hpp  error_item.cpp  error_item.hpp  error_list.hpp  error_location.hpp  errors.hpp  hkc_error.cpp  hkc_error.hpp  make_error.hpp
src/hkc/: command.hpp  hkc.cpp  options.cpp  options.hpp  repository.cpp  repository.hpp
src/object_model/: om_namespace.hpp  om_object.hpp  om_overload_set.hpp  om_template.hpp
src/parser/: consume.cpp  consume.hpp  file_parse_context.hpp  parse_build_guard.cpp  parse_build_guard.hpp  parse_build_guard_binary_operator.cpp  parse_build_guard_binary_operator.hpp  parse_build_guard_expression.cpp  parse_build_guard_expression.hpp  parse_build_guard_primary.cpp  parse_build_guard_primary.hpp  parse_context.hpp  parse_error.hpp  parse_fqname.cpp  parse_fqname.hpp  parse_import_declaration.cpp  parse_import_module_declaration.cpp  parse_import_module_declaration.hpp  parse_import_repository_declaration copy.cpp  parse_import_repository_declaration.cpp  parse_import_repository_declaration.hpp  parse_library_declaration.cpp  parse_library_declaration.hpp  parse_module.cpp  parse_module.hpp  parse_module_declaration.cpp  parse_module_declaration.hpp  parse_program_declaration.cpp  parse_program_declaration.hpp  parse_result.hpp  parse_top.cpp  parse_top.hpp  parser.cpp  parser.hpp  parsers.hpp  program_parse_context.hpp
src/prologue/: prologue_scan.cpp  prologue_scan.hpp  prologue_scan_tests.cpp
src/repository/: anchors.hpp  compiler.hpp  module.cpp  module.hpp  module_list.cpp  module_list.hpp  repository.cpp  repository.hpp  repository_tests.cpp  source.cpp  source.hpp
src/test_utilities/: paths.cpp.in  paths.hpp
src/tokenizer/: char_category.cpp  char_category.hpp  file_cursor.cpp  file_cursor.hpp  file_location.cpp  file_location.hpp  interned_string.hpp  line_table.cpp  line_table.hpp  parse_block_comment.cpp  parse_bracketed_string.cpp  parse_context_arg.cpp  parse_identifier.cpp  parse_line_comment.cpp  parse_line_directive.cpp  parse_number.cpp  parse_operator.cpp  parse_position_arg.cpp  parse_positional_argument.cpp  parse_scram_directive.cpp  parse_string.cpp  parse_superscript_integer.cpp  parse_tag.cpp  token.cpp  token.hpp  token_parsers.hpp  token_vector.hpp  tokenize_block_comment.cpp  tokenize_block_comment.hpp  tokenize_bracketed_string.cpp  tokenize_bracketed_string.hpp  tokenize_context_arg.cpp  tokenize_context_arg.hpp  tokenize_identifier.cpp  tokenize_number.cpp  (+21 more)
stdlib/: allocator.hkm  allocator_intf.hkm  base_integers.hkm  bitmap_allocator.hkm  builtin_integer.hkm  char_encoding.hkm  default_allocator.hkm  long.hkm  operators.hkm  raw_pointer.hkm  raw_ptr.hkm  si_units.hkm  span.hkm  std.hkm  string.hkm  string_encoding.hkm  string_le.hkm  unsafe_span.hkm  us_units.hkm  utility.hkm  wide_arithmetic_le.hkm
test_data/: simple.hkm
(+227 files in other folders)
